Truck factor algorithm implemented

--- a/workbench.ipynb
+++ b/workbench.ipynb
@@ -1,168 +1,97 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "65719299",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aecc7d45",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#### Imports"
+    "import os\n",
+    "import copy\n",
+    "import math\n",
+    "import shutil\n",
+    "import Levenshtein\n",
+    "from git import Repo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ef2ba936",
+   "execution_count": 2,
+   "id": "65d24ee2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "from matplotlib import pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9907ecf7",
-   "metadata": {},
-   "source": [
-    "#### Defining the repo"
+    "owner = \"fzaninotto\"\n",
+    "repo = \"Faker\"\n",
+    "url = f\"https://github.com/{owner}/{repo}.git\"\n",
+    "path = \"./tmp\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "66fdb1b7",
+   "execution_count": 3,
+   "id": "45fdf7d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "owner = \"ValveSoftware\"\n",
-    "repo = \"Proton\"\n",
+    "from src.gitruck import Gitruck\n",
     "\n",
-    "response = requests.get(f\"https://api.github.com/repos/{owner}/{repo}\")\n",
-    "default_branch = response.json()[\"default_branch\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "07c73ffa",
-   "metadata": {},
-   "source": [
-    "#### Hide"
+    "gitruck = Gitruck(owner, repo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "b390d6c1",
+   "execution_count": 4,
+   "id": "55e69aa8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gitruck.calculate_truck_factor()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "863b8b65",
+   "metadata": {},
+   "source": [
+    "# GitPython"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d7e6568",
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_extensions = \"\"\"ADA, ADB, 2.ADA – Ada (body) source\n",
-    "ADS, 1.ADA – Ada (specification) source\n",
-    "ASM, S – Assembly language source\n",
-    "BAS – BASIC, FreeBASIC, Visual Basic, BASIC-PLUS source,[17] PICAXE basic\n",
-    "BB – Blitz Basic Blitz3D\n",
-    "BMX – Blitz Basic BlitzMax\n",
-    "C – C source\n",
-    "CLJ – Clojure source code\n",
-    "CLS – Visual Basic class\n",
-    "COB, CBL – COBOL source\n",
-    "CPP, CC, CXX, C, CBP – C++ source\n",
-    "CS – C# source\n",
-    "CSPROJ – C# project (Visual Studio .NET)\n",
-    "D – D source\n",
-    "DBA – DarkBASIC source\n",
-    "DBPro123 – DarkBASIC Professional project\n",
-    "E – Eiffel source\n",
-    "EFS – EGT Forever Source File\n",
-    "EGT – EGT Asterisk Source File, could be J, C#, VB.net, EF 2.0 (EGT Forever)\n",
-    "EL – Emacs Lisp source\n",
-    "FOR, FTN, F, F77, F90 – Fortran source\n",
-    "FRM – Visual Basic form\n",
-    "FRX – Visual Basic form stash file (binary form file)\n",
-    "FTH – Forth source\n",
-    "GED – Game Maker Extension Editable file as of version 7.0\n",
-    "GD – Godot Engine's built-in scripting language (GDScript) source\n",
-    "GM6 – Game Maker Editable file as of version 6.x\n",
-    "GMD – Game Maker Editable file up to version 5.x\n",
-    "GMK – Game Maker Editable file as of version 7.0\n",
-    "GML – Game Maker Language script file\n",
-    "GO – Go source\n",
-    "H – C/C++ header file\n",
-    "HPP, HXX – C++ header file\n",
-    "HS – Haskell source\n",
-    "I – SWIG interface file\n",
-    "INC – Turbo Pascal included source\n",
-    "JAVA – Java source\n",
-    "JS – JavaScript source\n",
-    "L – lex source\n",
-    "LGT – Logtalk source\n",
-    "LISP – Common Lisp source\n",
-    "M – Objective-C source\n",
-    "M – MATLAB\n",
-    "M – Mathematica\n",
-    "MAP – CodeWarrior linker file\n",
-    "M4 – m4 source\n",
-    "ML – Standard ML and OCaml source\n",
-    "MSQR – M² source file, created by Mattia Marziali\n",
-    "N – Nemerle source\n",
-    "NB – Nuclear Basic source\n",
-    "P – Parser source\n",
-    "PAS, PP, P – Pascal source (DPR for projects)\n",
-    "PHP, PHP3, PHP4, PHP5, PHPS, Phtml – PHP source\n",
-    "PIV – Pivot stickfigure animator\n",
-    "PL, PM – Perl\n",
-    "PLI, PL1 – PL/I\n",
-    "PRG – Ashton-Tate; dbII, dbIII and dbIV, db, db7, clipper, Microsoft Fox and FoxPro, harbour, xharbour, and Xbase\n",
-    "PRO – IDL\n",
-    "POL – Apcera Policy Language doclet\n",
-    "PY – Python source\n",
-    "R – R source\n",
-    "raku, rakumod, rakudoc, rakutest, nqp – Raku Language\n",
-    "RED – Red source\n",
-    "REDS – Red/System source\n",
-    "RB – Ruby source\n",
-    "RESX – Resource file for .NET applications\n",
-    "RC, RC2 – Resource script files to generate resources for .NET applications\n",
-    "RKT, RKTL – Racket source\n",
-    "RS – Rust source\n",
-    "Resources – Visual Studio Code\n",
-    "S – CodeWarrior / PowerPC ASM\n",
-    "SCALA – Scala source\n",
-    "SCI, SCE – Scilab\n",
-    "SCM – Scheme source\n",
-    "SD7 – Seed7 source\n",
-    "SKB, SKC – Sage Retrieve 4GL Common Area (Main and Amended backup)\n",
-    "SKD – Sage Retrieve 4GL Database\n",
-    "SKF, SKG – Sage Retrieve 4GL File Layouts (Main and Amended backup)\n",
-    "SKI – Sage Retrieve 4GL Instructions\n",
-    "SKK – Sage Retrieve 4GL Report Generator\n",
-    "SKM – Sage Retrieve 4GL Menu\n",
-    "SKO – Sage Retrieve 4GL Program\n",
-    "SKP, SKQ – Sage Retrieve 4GL Print Layouts (Main and Amended backup)\n",
-    "SKS, SKT – Sage Retrieve 4GL Screen Layouts (Main and Amended backup)\n",
-    "SKZ – Sage Retrieve 4GL Security File\n",
-    "SLN – Visual Studio solution\n",
-    "SPIN – Spin source (for Parallax Propeller microcontrollers)\n",
-    "STK – Stickfigure file for Pivot stickfigure animator\n",
-    "SWG – SWIG source code\n",
-    "TCL – Tcl source code\n",
-    "VAP – Visual Studio Analyzer project\n",
-    "VB – Visual Basic.NET source\n",
-    "VBG – Visual Studio compatible project group\n",
-    "VBP, VIP – Visual Basic project\n",
-    "VBPROJ – Visual Basic .NET project\n",
-    "VCPROJ – Visual C++ project\n",
-    "VDPROJ – Visual Studio deployment project\n",
-    "XPL – XProc script/pipeline\n",
-    "XQ – XQuery file\n",
-    "XSL – XSLT stylesheet\n",
-    "Y – yacc source\"\"\"\n",
-    "extensions = []\n",
-    "for line in raw_extensions.split(\"\\n\"):\n",
-    "    exts = line.split(\" – \")[0]\n",
-    "    for ext in exts.split(\",\"):\n",
-    "        extensions.append(\".\" + ext.strip().lower())\n",
-    "extensions += [\".h\", \".hpp\", \".hxx\"]"
+    "owner = \"puppetlabs\"\n",
+    "repo = \"puppet\"\n",
+    "url = f\"https://github.com/{owner}/{repo}.git\"\n",
+    "path = \"./tmp\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72fc9dae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists(path):\n",
+    "    shutil.rmtree(path)\n",
+    "repo = Repo.clone_from(url, path)"
    ]
   },
   {
@@ -176,20 +105,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdb899b8",
+   "id": "62b32118",
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.get(f\"https://api.github.com/repos/{owner}/{repo}/git/trees/{default_branch}?recursive=true\")\n",
-    "tree = response.json()\n",
+    "# Uses linguist to get the files\n",
+    "git_cmd = repo.git\n",
+    "raw_files = git_cmd.execute([\"github-linguist\", \"-b\"])\n",
+    "raw_files\n",
+    "\n",
+    "# Removes the top analysis\n",
+    "raw_files = raw_files.split(\"\\n\")\n",
+    "for i in range(len(raw_files)):\n",
+    "    if raw_files[i] == \"\":\n",
+    "        raw_files = raw_files[i + 1 :]\n",
+    "        break\n",
+    "\n",
+    "# Gets the names of the files\n",
+    "_files = []\n",
+    "for line in raw_files:\n",
+    "    if \"  \" in line:\n",
+    "        _files.append(line.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5986ef8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_files_from_git(root, files, level=0):\n",
+    "    for entry in root:\n",
+    "        if entry.type == \"tree\":\n",
+    "            print_files_from_git(entry, files, level + 1)\n",
+    "        else:\n",
+    "            if entry.path in _files:\n",
+    "                files.append(entry)\n",
+    "\n",
     "\n",
     "files = []\n",
-    "for file in tree[\"tree\"]:\n",
-    "    if file[\"type\"] == \"blob\":\n",
-    "        path = file[\"path\"]\n",
-    "        name = path.split(\"/\")[-1]\n",
-    "        if (\".\" + name.split(\".\")[-1]) in extensions:\n",
-    "            files.append(file)"
+    "print_files_from_git(repo.head.commit.tree, files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "295a50c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(files)"
    ]
   },
   {
@@ -202,20 +168,256 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "d00e2e6e",
+   "execution_count": null,
+   "id": "c82af2ac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "contributors = []\n",
-    "page = 1\n",
-    "while True:\n",
-    "    response = requests.get(f\"https://api.github.com/repos/{owner}/{repo}/contributors?per_page=100&page={page}\")\n",
-    "    if response.json():\n",
-    "        contributors += response.json()\n",
-    "        page += 1\n",
+    "git_cmd = repo.git\n",
+    "contributors = git_cmd.execute([\"git\", \"shortlog\", \"-sne\", \"--all\"])\n",
+    "\n",
+    "contributors = contributors.split(\"\\n\")\n",
+    "for i in range(len(contributors)):\n",
+    "    contributor = contributors[i]\n",
+    "    count, identifier = contributor.strip().split(\"\\t\")\n",
+    "    count = int(count)\n",
+    "    name, email = identifier.split(\"<\")\n",
+    "    name = name.strip()\n",
+    "    email = email[:-1].strip()\n",
+    "    contributors[i] = tuple([count, name, email])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b76247ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(contributors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cae16ad3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Groups emails\n",
+    "grouped_emails = {}\n",
+    "for contributor in contributors:\n",
+    "    if contributor[2] not in grouped_emails.keys():\n",
+    "        grouped_emails[contributor[2]] = [contributor[1]]\n",
     "    else:\n",
-    "        break"
+    "        grouped_emails[contributor[2]].append(contributor[1])\n",
+    "\n",
+    "# Groups names\n",
+    "grouped_names = []\n",
+    "while len(grouped_emails.keys()) > 0:\n",
+    "    reference_group = grouped_emails.pop(list(grouped_emails.keys())[0])\n",
+    "    # Expands the reference group with other groups\n",
+    "    for key in list(grouped_emails.keys()):\n",
+    "        comparison_group = grouped_emails[key]\n",
+    "        # Checks if there is a pair of names in both groups\n",
+    "        # that have a Levenshtein distance of 1 or less\n",
+    "        for lhs_name in reference_group:\n",
+    "            for rhs_name in comparison_group:\n",
+    "                if Levenshtein.distance(lhs_name, rhs_name) <= 1:\n",
+    "                    # Unites both groups\n",
+    "                    reference_group += grouped_emails.pop(key)\n",
+    "                    break\n",
+    "            else:  # Bad code to make the inner loop break propagate to the outer loop\n",
+    "                continue\n",
+    "            break\n",
+    "    grouped_names.append(reference_group)\n",
+    "\n",
+    "# Creates a mapped-dev-name\n",
+    "dev_name = {}\n",
+    "for name_group in grouped_names:\n",
+    "    root_name = name_group[0]\n",
+    "    for name in name_group:\n",
+    "        dev_name[name] = root_name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ae3a64a",
+   "metadata": {},
+   "source": [
+    "#### Getting commits per file path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7a663c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "commits_per_filepath = {}\n",
+    "for file in files:\n",
+    "    commits_for_file_generator = repo.iter_commits(all=True, paths=file.path)\n",
+    "    commits_per_filepath[file.path] = list(commits_for_file_generator)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0ead1e2",
+   "metadata": {},
+   "source": [
+    "#### Calculating DOA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "203a493c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = _files\n",
+    "contributors = list(set(dev_name.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c66d7cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defines DOA data structure\n",
+    "DOA = {}\n",
+    "for contributor in contributors:\n",
+    "    DOA[contributor] = {}\n",
+    "    for file in files:\n",
+    "        DOA[contributor][file] = 0.0\n",
+    "\n",
+    "# Calculates DOA\n",
+    "for contributor in contributors:\n",
+    "    for file in files:\n",
+    "        # Authorship\n",
+    "        authorship = 0\n",
+    "        first_author = commits_per_filepath[file][-1].author.name\n",
+    "        if (first_author in dev_name.keys()) and (\n",
+    "            dev_name[commits_per_filepath[file][-1].author.name] == contributor\n",
+    "        ):\n",
+    "            authorship = 1\n",
+    "\n",
+    "        # Deliveries\n",
+    "        deliveries = 0\n",
+    "        acceptances = 0\n",
+    "        for commit in commits_per_filepath[file]:\n",
+    "            if (commit.author.name in dev_name.keys()) and (\n",
+    "                dev_name[commit.author.name] == contributor\n",
+    "            ):\n",
+    "                deliveries += 1\n",
+    "            else:\n",
+    "                acceptances += 1\n",
+    "\n",
+    "        # Final value\n",
+    "        DOA[contributor][file] = (\n",
+    "            3.293\n",
+    "            + 1.098 * authorship\n",
+    "            + 0.164 * deliveries\n",
+    "            - 0.321 * math.log(1 + acceptances)\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4987c55c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalizes DOA\n",
+    "normalized_DOA = copy.deepcopy(DOA)\n",
+    "for file in files:\n",
+    "    # Gets minimum and maximum values\n",
+    "    max_val = -1\n",
+    "    min_val = 999999\n",
+    "    for contributor in contributors:\n",
+    "        if DOA[contributor][file] > max_val:\n",
+    "            max_val = DOA[contributor][file]\n",
+    "        if DOA[contributor][file] < min_val:\n",
+    "            min_val = DOA[contributor][file]\n",
+    "\n",
+    "    # Normalizes each value\n",
+    "    for contributor in contributors:\n",
+    "        normalized_DOA[contributor][file] = (DOA[contributor][file] - min_val) / (\n",
+    "            max_val - min_val\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1829dad9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parameters\n",
+    "k = 0.75\n",
+    "m = 3.293\n",
+    "\n",
+    "# Computes authored files\n",
+    "authored_files = {}\n",
+    "for contributor in contributors:\n",
+    "    authored_files[contributor] = []\n",
+    "    for file in files:\n",
+    "        if (normalized_DOA[contributor][file] >= k) and (DOA[contributor][file] >= m):\n",
+    "            authored_files[contributor].append(file)\n",
+    "\n",
+    "# Orders it based on amount of files\n",
+    "authored_files = {\n",
+    "    k: v\n",
+    "    for k, v in sorted(\n",
+    "        authored_files.items(), key=lambda pair: len(pair[1]), reverse=True\n",
+    "    )\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44f14d44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculates the superset of files\n",
+    "_files = []\n",
+    "for contributor in authored_files.keys():\n",
+    "    _files += authored_files[contributor]\n",
+    "_files = list(set(_files))\n",
+    "\n",
+    "# Computes the truck factor\n",
+    "truck_factor = 0\n",
+    "while _files:\n",
+    "    # Stops if file coverage is below 50%\n",
+    "    if len(_files) < (0.5 * len(files)):\n",
+    "        break\n",
+    "\n",
+    "    # Removes top author and increases truck factor\n",
+    "    authored_files.pop(next(iter(authored_files)), None)\n",
+    "    truck_factor += 1\n",
+    "\n",
+    "    # Recalculates file set\n",
+    "    _files = []\n",
+    "    for contributor in authored_files.keys():\n",
+    "        _files += authored_files[contributor]\n",
+    "    _files = list(set(_files))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9243eac5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(truck_factor)"
    ]
   }
  ],
